# turso-htmx-flask

./: .env.example  .gitignore  .tmuxinator.yml  LICENSE  README.md  justfile  package-lock.json  package.json  pyproject.toml
scripts/: configure_env
src/: app.py  config.py  models.py
src/route_handlers/: home.py  seed.py
src/templates/: base.html  index.html
src/utils/: time.py
static/src/: main.css
