[tool.poetry]
name = "turso-htmx-flask"
version = "0.1.0"
description = "Demo Turso, htmx, and Flask project"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.2"
Flask-Assets = "^2.1.0"
sqlalchemy-libsql = "^0.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
mypy = "^1.8.0"
isort = "^5.13.2"
ruff = "^0.2.1"
pytailwindcss = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
