[project]
name = "turso-htmx-flask"
version = "0.1.0"
description = "Turos + htmx + flask"
authors = [{ name = "Larry Botha" }]
readme = "README.md"
requires-python = ">= 3.8"
license = "MIT"
dependencies = [
  "Flask==3.0.2",
  "Flask-Assets==2.1.0",
  "sqlalchemy-libsql==0.1.0",
  "python-dotenv==1.0.1",
]


[project.scripts]
hello = "turso_htmx_flask:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["black", "mypy", "isort", "ruff", "pytailwindcss"]


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/turso_htmx_flask"]
